a1/brendan_gordon/TEST_PROGRAMS/invalidtype/hongji_chen/duplicateDef.min
var x : int;
var x : float;
x = 0.;
